tests/gold/errors/arrays.comp
[[1;31mERROR[0m]: src/errors/arrays.3:25: syntax error.

Compilation failed!
